--- a/company.html
+++ b/company.html
@@ -67,7 +67,7 @@
         </header>
         
         <!--==============================content================================-->
-        <section id="content"><div class="ic">More Website Templates @ TemplateMonster.com. December10, 2011!</div>
+        <section id="content"><div class="ic">More Website Templates @ TemplateMonster.com. Setembro, 2016!</div>
             <div class="content-bg">
                 <div class="main">
                     <div class="container_12">
