--- a/company.html
+++ b/company.html
@@ -183,7 +183,7 @@
                         	<h4 class="indent-bot">Conecte-se a nós:</h4>
                             <ul class="list-services border-bot img-indent-bot">
                             	<li><a href="#">Facebook</a></li>
-                                <li><a class="item-1" href="#">Twitter</a></li>
+                                <li><a class="item-1" href="#">Instagram</a></li>
                                 <!--<li><a class="item-2" href="#">Picassa</a></li> -->
                                 <li><a class="item-3" href="#">You Tube</a></li>
                             </ul>
