--- a/company.html
+++ b/company.html
@@ -185,7 +185,7 @@
                             	<li><a href="#">Facebook</a></li>
                                 <li><a class="item-1" href="#">Instagram</a></li>
                                 <!--<li><a class="item-2" href="#">Picassa</a></li> -->
-                                <li><a class="item-3" href="#">You Tube</a></li>
+                                <li><a class="item-3" href="#">Youtube</a></li>
                             </ul>
                             <p class="p1">SilverSoft &copy; 2016 </p>
                             <!-- <p class="p1"><a class="link" target="_blank" href="http://www.templatemonster.com/" rel="nofollow">Website Template</a> by TemplateMonster.com</p> -->
