atualização dos banners do index

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 	<div class="carousel-container">
                       <div id="carousel">
                         <div class="carousel-feature">
-                          <a href="#"><img class="carousel-image" alt="" src="images/gallery-img1.png"></a>                          
+                          <a href="#"><img class="carousel-image" alt="" src="images/banner02.png"></a>                          
                         </div>
                         <div class="carousel-feature">
-                          <a href="#"><img class="carousel-image" alt="" src="images/gallery-img3.png"></a>
+                          <a href="#"><img class="carousel-image" alt="" src="images/banner03.png"></a>
                         </div>
                         <div class="carousel-feature">
                           <a href="#"><img class="carousel-image" alt="" src="images/gallery-img2.png"></a>
