--- a/company.html
+++ b/company.html
@@ -67,7 +67,7 @@
         </header>
         
         <!--==============================content================================-->
-        <section id="content"><div class="ic">More Website Templates @ TemplateMonster.com. Setembro, 2016!</div>
+        <section id="content"><div class="ic">More Website Templates @ TemplateMonster.com. December10, 2011!</div>
             <div class="content-bg">
                 <div class="main">
                     <div class="container_12">
@@ -183,9 +183,9 @@
                         	<h4 class="indent-bot">Conecte-se a nós:</h4>
                             <ul class="list-services border-bot img-indent-bot">
                             	<li><a href="#">Facebook</a></li>
-                                <li><a class="item-1" href="#">Instagram</a></li>
+                                <li><a class="item-1" href="#">Twitter</a></li>
                                 <!--<li><a class="item-2" href="#">Picassa</a></li> -->
-                                <li><a class="item-3" href="#">Youtube</a></li>
+                                <li><a class="item-3" href="#">You Tube</a></li>
                             </ul>
                             <p class="p1">SilverSoft &copy; 2016 </p>
                             <!-- <p class="p1"><a class="link" target="_blank" href="http://www.templatemonster.com/" rel="nofollow">Website Template</a> by TemplateMonster.com</p> -->
