--- a/company.html
+++ b/company.html
@@ -73,13 +73,13 @@
                     <div class="container_12">
                         <div class="wrapper">
                             <article class="grid_4">
-                                <h3>Management Team</h3>
+                                <h3>Equipe Técnica</h3>
                                 <div class="wrapper indent-bot2">
-                                    <figure class="img-indent"><a href="#"><img class="img-border" src="images/page2-img1.jpg" alt="" /></a></figure>
+                                    <figure class="img-indent"><a href="#"><img class="img-border" src="images/imagediretoroficial.jpg" alt="" /></a></figure>
                                     <div class="extra-wrap">
-                                        <span class="text-2">Director</span>
-                                        <h4 class="p1">Mary Ryan</h4>
-                                        Ut vero eos et accusamus et iusto odio dignissimos ducimus.
+                                        <span class="text-2">Diretor</span>
+                                        <h4 class="p1">Francisco Kegenaldo Alves de Sousa</h4>
+                                        Doutor em Ciências e Engenharia de Materiais pela Universidade Federal de Campina Grande (2010) e Mestre em Engenharia </br> de Produção  pela Universidade Federal da Paraíba (2005). </br> Tem larga experiência em Engenharia de Produção.
                                     </div>
                                 </div>
                                 <div class="wrapper indent-bot2">
@@ -183,9 +183,9 @@
                         	<h4 class="indent-bot">Conecte-se a nós:</h4>
                             <ul class="list-services border-bot img-indent-bot">
                             	<li><a href="#">Facebook</a></li>
-                                <li><a class="item-1" href="#">Twitter</a></li>
+                                <li><a class="item-1" href="#">Instagran</a></li>
                                 <!--<li><a class="item-2" href="#">Picassa</a></li> -->
-                                <li><a class="item-3" href="#">You Tube</a></li>
+                                <li><a class="item-3" href="#">YouTube</a></li>
                             </ul>
                             <p class="p1">SilverSoft &copy; 2016 </p>
                             <!-- <p class="p1"><a class="link" target="_blank" href="http://www.templatemonster.com/" rel="nofollow">Website Template</a> by TemplateMonster.com</p> -->
