atualização dos banners do index

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                           <a href="#"><img class="carousel-image" alt="" src="images/banner03.png"></a>
                         </div>
                         <div class="carousel-feature">
-                          <a href="#"><img class="carousel-image" alt="" src="images/gallery-img2.png"></a>
+                          <a href="#"><img class="carousel-image" alt="" src="images/banner04.png"></a>
                         </div>
                       </div>
     				</div>
