--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
                     <div class="container_12">
                         <div class="wrapper">
                             <article class="grid_12">
-                            	<h3>Our Latest Projects</h3>
+                            	<h3>Nossos últimos projetos</h3>
                                 <div class="wrapper p3">
                                 	<article class="grid_4 alpha">
                                     	<h4 class="p2">Project 1</h4>
