--- a/services.html
+++ b/services.html
@@ -73,13 +73,13 @@
                     <div class="container_12">
                         <div class="wrapper img-indent-bot">
                             <article class="grid_12">
-                            	<h3>Main Services Overview</h3>
+                            	<h3>Projetos de Capacitação</h3>
                                 <div class="wrapper p3">
                                 	<article class="grid_4 alpha">
                                     	<div class="wrapper">
                                         	<figure class="img-indent3"><img src="images/page3-img1.png" alt="" /></figure>
                                             <div class="extra-wrap">
-                                            	<h4 class="p1">Technology <strong>Consulting</strong></h4>
+                                            	<h4 class="p1">Formação de Supervisores e Gerentes Industriais</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
                                                 <a class="link-1" href="#">Know More</a>
                                             </div>
@@ -89,7 +89,7 @@
                                     	<div class="wrapper">
                                         	<figure class="img-indent2"><img src="images/page3-img2.png" alt="" /></figure>
                                             <div class="extra-wrap">
-                                            	<h4 class="p1">Software <strong>Development</strong></h4>
+                                            	<h4 class="p1">Ferramentas de Gestão da Produção</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
                                                 <a class="link-1" href="#">Know More</a>
                                             </div>
@@ -100,7 +100,7 @@
                                             <div class="wrapper">
                                                 <figure class="img-indent3"><img src="images/page3-img3.png" alt="" /></figure>
                                                 <div class="extra-wrap">
-                                                    <h4 class="p1">Interactive <strong>Web Design</strong></h4>
+                                                    <h4 class="p1">Sistema da Qualidade ISO-9001:2008</strong></h4>
                                                     <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
                                                     <a class="link-1" href="#">Know More</a>
                                                 </div>
