--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<!-- cada anúncio começa com o div e depois article -->
                         <article class="grid_8">
                         	<h3>Atuação</h3>
-                            <em class="text-1 margin-bot">o escritório constitui-se em estratégico mecanismo de integração entre as técnicas de gestão praticadas nas Américas do Sul, Centro e Norte. Com equipe residente formada por Assistentes Administrativos e Consultores de experiência internacional, o escritório propõe-se disponibilizar ao Mercado Local e Regional, Serviços de Consultoria e Treinamento amplamente consolidado ao longo de 08 anos de trajetória no cenário regional.</em>
+                            <em class="text-1 margin-bot">O escritório constitui-se em estratégico mecanismo de integração entre as técnicas de gestão praticadas nas Américas do Sul, Centro e Norte. Com equipe residente formada por Assistentes Administrativos e Consultores de experiência internacional, o escritório propõe-se disponibilizar ao Mercado Local e Regional, Serviços de Consultoria e Treinamento amplamente consolidado ao longo de 08 anos de trajetória no cenário regional.</em>
                             <div class="wrapper p4">
                             	<article class="grid_4 alpha">
                                 	<div class="wrapper p1">
