--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-    <title>FK consultoria Empresarial</title>
+    <title> FK Consultoria Empresarial Ltda.</title>
     
 	
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
