--- a/contact.html
+++ b/contact.html
@@ -95,12 +95,13 @@
                             <article class="grid_4">
                             	<h3>Localização:</h3>
                                 <figure class="img-indent-bot img-border">
-                                    <iframe width="298" height="179" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
+                                    <iframe width="298" height="179" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.988187538078!2d-35.882791685805394!3d-7.242182194772115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ac1e7ab5cdd247%3A0x5fa9a99ab602fd27!2sR.+Valdemira+Em%C3%ADlia+Pinto%2C+100+-+Catol%C3%A9%2C+Campina+Grande+-+PB%2C+58410-460!5e0!3m2!1spt-BR!2sbr!4v1478712510065"></iframe>
                                 </figure>
                                 <dl>
-                                    <dt class="indent-bot">BR<br>Rua Valdemira Emília Pinto, 100, Catolé – Campina Grande - PB</dt>
+                                    <dt class="indent-bot">BR<br>Rua Valdemira Emília Pinto, 100,
+																 Catolé – Campina Grande - PB</dt>
                                     <dd><span>Telephone:</span> +55 (83) 3331 1660</dd>
-                                    <dd><span>Email:</span><a href="#">mail@demolink.org</a></dd>
+                                    <dd><span>Email:</span><a href="#">consultoria@fkconsulting.com.br</a></dd>
                                 </dl>
                             </article>                        
                         </div>
