--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
                                             <div class="extra-wrap">
                                             	<h4 class="p1">Formação de Supervisores e Gerentes Industriais</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
-                                                <a class="link-1" href="#">Know More</a>
+                                                <a class="link-1" href="#">Leia mais</a>
                                             </div>
                                         </div>
                                     </article>
@@ -93,7 +93,7 @@
                                             <div class="extra-wrap">
                                             	<h4 class="p1">Ferramentas de Gestão da Produção</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
-                                                <a class="link-1" href="#">Know More</a>
+                                                <a class="link-1" href="#">Leia mais</a>
                                             </div>
                                         </div>
                                     </article>
@@ -106,7 +106,7 @@
                                                 <div class="extra-wrap">
                                                     <h4 class="p1">Sistema da Qualidade ISO-9001:2008</strong></h4>
                                                     <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
-                                                    <a class="link-1" href="#">Know More</a>
+                                                    <a class="link-1" href="#">Leia mais</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -121,7 +121,7 @@
                                             <div class="extra-wrap">
                                             	<h4 class="p1">Staff <strong>Augmentation</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
-                                                <a class="link-1" href="#">Know More</a>
+                                                <a class="link-1" href="#">Leia mais</a>
                                             </div>
                                         </div>
                                     </article>
@@ -131,7 +131,7 @@
                                             <div class="extra-wrap">
                                             	<h4 class="p1">Interactive <strong>Marketing</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
-                                                <a class="link-1" href="#">Know More</a>
+                                                <a class="link-1" href="#">Leia mais</a>
                                             </div>
                                         </div>
                                     </article>
@@ -142,7 +142,7 @@
                                                 <div class="extra-wrap">
                                                     <h4 class="p1">Search engine <strong>Marketing</strong></h4>
                                                     <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
-                                                    <a class="link-1" href="#">Know More</a>
+                                                    <a class="link-1" href="#">Leia mais</a>
                                                 </div>
                                             </div>
                                         </div>
