--- a/services.html
+++ b/services.html
@@ -77,7 +77,7 @@
                                 <div class="wrapper p3">
                                 	<article class="grid_4 alpha">
                                     	<div class="wrapper">
-                                        	<figure class="img-indent3"><img src="images/page3-img1.png" alt="" /></figure>
+                                        	<figure class="img-indent3"><img src="images/icon-pageIndex.png" alt="" /></figure>
                                             <div class="extra-wrap">
                                             	<h4 class="p1">Formação de Supervisores e Gerentes Industriais</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
@@ -89,7 +89,7 @@
 									
                                     <article class="grid_4">
                                     	<div class="wrapper">
-                                        	<figure class="img-indent2"><img src="images/page3-img2.png" alt="" /></figure>
+                                        	<figure class="img-indent2"><img src="images/gestao.png" alt="" /></figure>
                                             <div class="extra-wrap">
                                             	<h4 class="p1">Ferramentas de Gestão da Produção</strong></h4>
                                                 <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
@@ -102,7 +102,7 @@
                                     <article class="grid_4 omega">
                                     	<div class="indent-left3">
                                             <div class="wrapper">
-                                                <figure class="img-indent3"><img src="images/page3-img3.png" alt="" /></figure>
+                                                <figure class="img-indent3"><img src="images/iso90012008.png" alt="" /></figure>
                                                 <div class="extra-wrap">
                                                     <h4 class="p1">Sistema da Qualidade ISO-9001:2008</strong></h4>
                                                     <p class="prev-indent-bot">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau dantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
