--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                             	<!-- <figure class="img-indent"><a href="#"><img class="img-border" src="images/page1-img5.jpg" alt="" /></a></figure> -->
                                 <div class="extra-wrap">
                                 	<!-- <span class="text-2">Director</span> -->
-                                    <h4>Dólar fecha em alta após vitória de Donald Trump nos EUA (G1)</h4>
+                                    <!-- <h4>Dólar fecha em alta após vitória de Donald Trump nos EUA (G1)</h4>
                                     <p class="prev-indent-bot">O dólar fechou em alta em relação ao real nesta quarta-feira (9), reagindo ao resultado das eleições presidenciais nos Estados Unidos. Contrariando as expectativas do mercado, o republicano Donald Trump superou a democrata Hillary Clinton e venceu a disputa...</p>
                                     <a class="link-1" href="http://g1.globo.com/economia/">Leia Mais</a>
 									</div>
-									</div>
-									<iframe src="http://www.noticiasemseusite.com.br/MN_Cont_Externo.asp?CodUsr=12303&CodRSS=4&CorTiulo=3300ff&CorFonte=000000&CorFundo=F2F2F2&width=300&height=200" width="300" height="400" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0"></iframe>
+									</div>-->
+									<iframe src="http://www.noticiasemseusite.com.br/MN_Cont_Externo.asp?CodUsr=12303&CodRSS=4&CorTiulo=39b9d6&CorFonte=000000&CorFundo=F2F2F2&width=300&height=200" width="300" height="600" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0"></iframe>
 
                                
 							   </div>
