adicionado outra aba

--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
                                     	<div class="wrapper">
                                         	<figure class="img-indent3"><img src="images/icon-pageIndex.png" alt="" /></figure>
                                             <div class="extra-wrap">
-                                            	<h4 class="p1">Formação de Supervisores e Gerentes Industriais</strong></h4>
+                                            	<a href="D:\Theo-Info\Documents\GitHub\fksite\formacao.html"> <h4 class="p1">Formação de Supervisores e Gerentes Industriais</strong></h4> </a>
                                                 <p class="prev-indent-bot"><h2>Com formação em:</h2> </br>
 																		   * Planejamento e Controle da Produção.</br> 
 																		   * Introdução à Modelagem.</br> 
@@ -90,7 +90,7 @@
 																		   * Processos de Produção.</br> 
 																		   * Relações Interpessoais.</br> 
 																		   * Gestão da Qualidade.</p>
-                                                <a class="link-1" href="#">Leia mais</a>
+                                                <a class="link-1" href="D:\Theo-Info\Documents\GitHub\fksite\formacao.html">Leia mais</a>
 												<br>
                                             </div>
                                         </div>
@@ -113,8 +113,8 @@
                                             </div>
                                         </div>
                                     </article>
+
 									
-								
                                     <article class="grid_5">
                                     	<div class="wrapper">
 										<br>
@@ -170,7 +170,7 @@
                         </div>
                         <div class="wrapper">
                         	<article class="grid_8">
-                            	<h3>Additional Services</h3>
+                            	<h3>Serviços adicionais</h3>
                                 <div class="wrapper">
                                 	<figure class="img-indent"><img class="img-border" src="images/page3-img7.jpg" alt="" /></figure>
                                     <div class="extra-wrap">
@@ -184,7 +184,7 @@
                             </article>
                             <article class="grid_4">
                             	<div class="indent-left3">
-                                    <h3>How It Works</h3>
+                                    <h3>Como funciona</h3>
                                     <div class="wrapper indent-bot">
                                         <h4 class="img-indent2">Step 1</h4>
                                         <div class="extra-wrap">
